tests/lean/rflTacticErrors.lean.expected.out
rflTacticErrors.lean:11:31-11:34: error: The rfl tactic failed. Possible reasons:
- The goal is not a reflexive relation (neither `=` nor a relation with a @[refl] lemma).
- The arguments of the relation are not equal.
Try using the reflexivity lemma for your relation explicitly, e.g. `exact Eq.refl _` or
`exact HEq.rfl` etc.
⊢ false = true
rflTacticErrors.lean:33:30-33:39: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:34:30-34:39: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:41:45-41:54: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:42:45-42:54: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:54:31-54:40: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:55:31-55:40: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:62:46-62:55: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:63:46-63:55: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:75:32-75:41: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:76:32-76:41: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:78:47-78:56: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ true'' = true
rflTacticErrors.lean:79:47-79:56: error: tactic 'apply' failed, failed to unify
  @HEq ?α ?a ?α ?a
with
  @HEq Bool true'' Bool true
⊢ HEq true'' true
rflTacticErrors.lean:80:47-80:56: error: tactic 'rfl' failed, The lhs
  True''
is not definitionally equal to rhs
  True
⊢ True'' ↔ True
rflTacticErrors.lean:81:47-81:56: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ P true'' true
rflTacticErrors.lean:82:47-82:56: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ Q true'' true
rflTacticErrors.lean:83:47-83:56: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ Q' true'' true
rflTacticErrors.lean:84:47-84:56: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ R true'' true
rflTacticErrors.lean:87:31-87:40: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ false = true
rflTacticErrors.lean:88:31-88:40: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq false true
⊢ HEq false true
rflTacticErrors.lean:89:31-89:40: error: tactic 'rfl' failed, The lhs
  False
is not definitionally equal to rhs
  True
⊢ False ↔ True
rflTacticErrors.lean:90:31-90:40: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ P false true
rflTacticErrors.lean:91:31-91:40: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ Q false true
rflTacticErrors.lean:92:31-92:40: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ Q' false true
rflTacticErrors.lean:93:31-93:40: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ R false true
rflTacticErrors.lean:95:46-95:55: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ false = true
rflTacticErrors.lean:96:46-96:55: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq false true
⊢ HEq false true
rflTacticErrors.lean:97:46-97:55: error: tactic 'rfl' failed, The lhs
  False
is not definitionally equal to rhs
  True
⊢ False ↔ True
rflTacticErrors.lean:98:46-98:55: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ P false true
rflTacticErrors.lean:99:46-99:55: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ Q false true
rflTacticErrors.lean:100:46-100:55: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ Q' false true
rflTacticErrors.lean:101:46-101:55: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ R false true
rflTacticErrors.lean:105:27-105:36: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq true 1
⊢ HEq true 1
rflTacticErrors.lean:106:42-106:51: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq true 1
⊢ HEq true 1
rflTacticErrors.lean:113:30-113:39: error: tactic 'rfl' failed, The lhs
  true
is not definitionally equal to rhs
  false
⊢ S true false
rflTacticErrors.lean:114:45-114:54: error: tactic 'rfl' failed, The lhs
  true
is not definitionally equal to rhs
  false
⊢ S true false
rflTacticErrors.lean:115:30-115:39: error: unsolved goals
case a
⊢ true = true
rflTacticErrors.lean:116:45-116:54: error: unsolved goals
case a
⊢ true = true
rflTacticErrors.lean:117:30-117:39: error: unsolved goals
case a
⊢ false = true
rflTacticErrors.lean:118:45-118:54: error: unsolved goals
case a
⊢ false = true
